--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ h1 {
   font-size: 3rem;
 }
 
+.notification {
+  background-color: #ffdd57;
+  padding: 10px;
+  text-align: center;
+  font-size: 18px;
+  display: none;
+}
+
 .poster {
   width: 50%;
   margin-left: 25%;
